    arguments when creating Builder objects.  Enhance Dir Nodes so that
    they can be created with user-specified Builder objects.

  - Don't blow up with stack trace when the external $PATH environment
    variable isn't set.

  - Make Builder calls return lists all the time, even if there's only
    one target.  This keeps things consistent and easier to program to
    across platforms.

  From Chris Murray:

  - Add a .win32 attribute to force file names to expand with
    Windows backslash path separators.

  - Fix escaping file names on command lines when the expansion is
    concatenated with another string.

  - Add support for Fortran 90 and Fortran 95.  This adds $FORTRAN*
    variables that specify a default compiler, command-line, flags,
    etc. for all Fortran versions, plus separate $F90* and $F95*
    variables for when different compilers/flags/etc. must be specified
    for different Fortran versions.

  - Have individual tools that create libraries override the default
    $LIBPREFIX and $LIBSUFFIX values set by the platform.  This makes
    it easier to use Microsoft Visual Studio tools on a CygWin platform.

  From Gary Oberbrunner:

  - Add a --debug=presub option to print actions prior to substitution.

  - Add a warning upon use of the override keywords "targets" and
    "sources" when calling Builders.  These are usually mistakes which
    are otherwise silently (and confusingly) turned into construction
    variable overrides.

  - Try to find the ICL license file path name in the external environment
    and the registry before resorting to the hard-coded path name.

  - Add support for fetching command-line keyword=value arguments in
    order from an ARGLIST list.

  - Avoid stack traces when trying to read dangling symlinks.

  - Treat file "extensions" that only contain digits as part of the
    file basename.  This supports version numbers as part of shared
    library names, for example.
